# viewBot-yt

./: pyproject.toml  requirements.txt  viewbot.py
tests/: test_youtube_views.py
youtube_views/: browserdriver.py  keepalive.py
